--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
     <title>PortFolio</title>
   </head>
   <body>
-    <div id="root" style="width: 100%;"></div>
+    <div id="root" style="width: 100%; background-color: blue;"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
